--- a/index.html
+++ b/index.html
@@ -1,25 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Para mi Lelys 💖</title>
-    <style>
-        body {
-            background: linear-gradient(to right, #ff758c, #ff7eb3);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        h1 {
-            color: white;
-            font-size: 42px;
-            text-shadow: 2px 2px 15px rgba(0,0,0,0.4);
-        }
-    </style>
+<meta http-equiv="refresh" content="0; url=https://baque2005.github.io/public-files/files/1770515861577_galaxia.html">
 </head>
 <body>
-    <h1>Para mi Lelys 💖</h1>
 </body>
 </html>
