--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="refresh" content="0; url=https://baque2005.github.io/public-files/files/1770515861577_galaxia.html">
-</head>
-<body>
-</body>
-</html>
+view-source:https://baque2005.github.io/public-files/files/1770515861577_galaxia.html
